--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,12 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>javax.annotation</groupId>
