[bugfix] fixes request.setPath() when starting with "/" [feature] Increases testing coverage.

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com/intuit/karate/core/**</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
