--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.zenwave360</groupId>
-    <artifactId>apimock</artifactId>
+    <artifactId>zenwave-apimock</artifactId>
     <version>0.0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
