--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.zenwave360</groupId>
     <artifactId>zenwave-apimock</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -55,7 +55,7 @@
         <connection>scm:git:git://github.com/ZenWave360/apimock.git</connection>
         <developerConnection>scm:git:git@github.com:ZenWave360/ZenWave360.git</developerConnection>
         <url>https://github.com/ZenWave360/apimock</url>
-        <tag>v0.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
