--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <karate.version>1.4.1</karate.version>
-        <armeria.version>1.13.4</armeria.version>
+
+        <!--        <karate.version>1.4.0</karate.version>-->
+        <!--        <karate.groupId>com.intuit.karate</karate.groupId>-->
+
+        <karate.version>1.5.0</karate.version>
+        <karate.groupId>io.karatelabs</karate.groupId>
+
         <openapi4j.version>1.0.7</openapi4j.version>
         <jackson-dataformat-yaml.version>2.14.2</jackson-dataformat-yaml.version>
+<!--        <armeria.version>1.13.4</armeria.version>-->
     </properties>
 
     <licenses>
@@ -246,7 +252,7 @@
 
 	<dependencies>
         <dependency>
-            <groupId>com.intuit.karate</groupId>
+            <groupId>${karate.groupId}</groupId>
             <artifactId>karate-core</artifactId>
             <version>${karate.version}</version>
         </dependency>
